# TimeEstimationApp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: main.cpp.53317E5BB21225B2.idx
lib/: util.cpp  util.hpp
